--- a/README
+++ b/README
@@ -32,6 +32,48 @@ Required modules:
 In addition spectra from stellar population modeling (e.g. Starburst 99)
 are needed as input for the EBL modeling.
 
+For installation git is recommended
+
+=====
+Usage
+
+Make sure to fulfill the requirements.
+
+(1) Download a3p2 from github:
+    - Create a directory for a3p2
+        mkdir <your_a3p2_directory>
+    - Enter the directory
+        cd <your_a3p2_directory>
+    - Clone from github
+        git clone git@github.com:mraue/a3p2.git
+      or download and unzip
+        https://github.com/mraue/a3p2/archive/master.zip
+
+(2) Add directory to python path:
+    export PYTHONPATH=$PYTHONPATH:<your_a3p2_directory>
+
+(3) Test the installation
+    - Enter the installation directory
+        cd <your_a3p2_directory>
+    - Test drawing the EBL limit collection:
+        python scripts/draw_ebl_measurements.py
+      If everything went well you should see a plot with
+      EBL limits. If not please check the output for errors.
+    - Test the EBL model calculation:
+        python scripts/calculate_ebl_model.py config/TRY_ME_FIRST_EBL.cfg.py
+      This should take some time to calculate. In the end you should
+      end up with a plot of the EBL model.
+      Run the script without command line parameters to see further options.
+
+(4) Next steps
+    - Study the terminal output of calculate_ebl_model.py
+    - Study config/TRY_ME_FIRST_EBL.cfg.py
+    - Study a3p2/ebl/model.py
+    - Run python scripts/plot_ebl_model_sfr.py config/TRY_ME_FIRST_EBL.cfg.py
+    - Run calculate_ebl_model.py and create an output file
+    - Take a look at the output file (fits)
+    - Run scripts/calculate_ebl_attenuation.py
+
 =======
 LICENSE
 
